# open-journal-mpls

./: .drone.yml  .env.example  .gitignore  CNAME  Prompts.md  README.md  pyproject.toml
.github/workflows/: generate.yml  hugo.yml
archive/: meeting_cache.json
archive/council/: council_page_0.json  council_page_1.json  council_page_10.json  council_page_11.json  council_page_12.json  council_page_13.json  council_page_14.json  council_page_15.json  council_page_16.json  council_page_17.json  council_page_18.json  council_page_19.json  council_page_2.json  council_page_20.json  council_page_21.json  council_page_22.json  council_page_23.json  council_page_24.json  council_page_25.json  council_page_26.json  council_page_27.json  council_page_28.json  council_page_29.json  council_page_3.json  council_page_4.json  council_page_5.json  council_page_6.json  council_page_7.json  council_page_8.json  council_page_9.json  meeting_cache.json.old
archive/summary/: summary_-3K9Te3ON6A.md  summary_-9eQuQI8-70.md  summary_-_HoDd8pkog.md  summary_0CAaaUkOXPU.md  summary_0DVHjDWDwBo.md  summary_1FqE7KYy2gs.md  summary_1GLTIeH6t3g.md  summary_1Mcd7TAwpJo.md  summary_1SMuF8vWlZE.md  summary_1fa2elINEY8.md  summary_1n2P0N9-iIg.md  summary_32cQ-Hpu8dU.md  summary_4EK3wPndCEQ.md  summary_4ZcG1_a10yA.md  summary_4_lRkMcTd6M.md  summary_4igFq5tUnyI.md  summary_59NICPXTVUU.md  summary_5gQTddill9A.md  summary_62u1RNwj8pA.md  summary_76AzlbZdAQg.md  (+97 more)
blog/: hugo.toml  hugo.yaml
lims_utils/: claude.py  lims.py  meetings.py  prompts.py  scripts.py  transcript.py  utils.py  youtube.py
(+514 files in other folders)
